--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Github Report</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push to github</h1>
@@ -12,5 +13,6 @@
     <p>Hello I am Muhammad Sirajul Islam</p>
     <p>I am learning about html, css</p>
     <p>Now I am learning about github</p>
+    <p>Why not working</p>
 </body>
 </html>
