--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <p>I am learning about html, css</p>
     <p>Now I am learning about github</p>
     <p>Why not working</p>
+    <img src="download.png" alt="">
+    <img src="viber_image_2023-06-21_23-59-40-687.jpg" alt="">
 </body>
 </html>
