--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <img src="download.png" alt="">
     <img src="viber_image_2023-06-21_23-59-40-687.jpg" alt="">
     <a href="https://www.youtube.com/">youtube</a>
+    <img src="jamuna.jpg" alt="">
 </body>
 </html>
