--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="https://www.youtube.com/">youtube</a>
     <div>
         <h1>My New blog</h1>
-        <h5>I learn about git</h5>
+        <h5>I learn about git. But it is difficult</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis obcaecati vero, aliquam ab quisquam fugiat dolore nemo nisi dolorum, atque, modi quos fugit. Id quos, qui magni veritatis ducimus, dolorum nesciunt doloribus consectetur cumque inventore vel dolore consequuntur laboriosam tenetur.</p>
     </div>
     <img src="jamuna.jpg" alt="">
